src/ref/raylib.h


typedef struct Vector2 {
    float x;                
    float y;                
} Vector2;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Vector4 {
    float x;                
    float y;                
    float z;                
    float w;                
} Vector4;
typedef struct Color {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} Color;
typedef struct Rectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture;
typedef Texture Texture2D;
typedef Texture TextureCubemap;
typedef RenderTexture RenderTexture2D;
typedef struct NPatchInfo {
    Rectangle source;       
    int left;               
    int top;                
    int right;              
    int bottom;             
    int layout;             
} NPatchInfo;
typedef struct GlyphInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    Image image;            
} GlyphInfo;
typedef struct Font {
    int baseSize;           
    int glyphCount;         
    int glyphPadding;       
    Texture2D texture;      
    Rectangle *recs;        
    GlyphInfo *glyphs;      
} Font;
RLAPI Image ImageCopy(Image image);                                                                      
RLAPI Image ImageFromImage(Image image, Rectangle rec);                                                  
RLAPI Image ImageText(const char *text, int fontSize, Color color);                                      
RLAPI Image ImageTextEx(Font font, const char *text, float fontSize, float spacing, Color tint);         
RLAPI void ImageFormat(Image *image, int newFormat);                                                     
RLAPI void ImageToPOT(Image *image, Color fill);                                                         
RLAPI void ImageCrop(Image *image, Rectangle crop);                                                      
RLAPI void ImageAlphaCrop(Image *image, float threshold);                                                
RLAPI void ImageAlphaClear(Image *image, Color color, float threshold);                                  
RLAPI void ImageAlphaMask(Image *image, Image alphaMask);                                                
RLAPI void ImageAlphaPremultiply(Image *image);                                                          
RLAPI void ImageResize(Image *image, int newWidth, int newHeight);                                       
RLAPI void ImageResizeNN(Image *image, int newWidth,int newHeight);                                      
RLAPI void ImageResizeCanvas(Image *image, int newWidth, int newHeight, int offsetX, int offsetY, Color fill);  
RLAPI void ImageMipmaps(Image *image);                                                                   
RLAPI void ImageDither(Image *image, int rBpp, int gBpp, int bBpp, int aBpp);                            
RLAPI void ImageFlipVertical(Image *image);                                                              
RLAPI void ImageFlipHorizontal(Image *image);                                                            
RLAPI void ImageRotateCW(Image *image);                                                                  
RLAPI void ImageRotateCCW(Image *image);                                                                 
RLAPI void ImageColorTint(Image *image, Color color);                                                    
RLAPI void ImageColorInvert(Image *image);                                                               
RLAPI void ImageColorGrayscale(Image *image);                                                            
RLAPI void ImageColorContrast(Image *image, float contrast);                                             
RLAPI void ImageColorBrightness(Image *image, int brightness);                                           
RLAPI void ImageColorReplace(Image *image, Color color, Color replace);                                  
RLAPI Color *LoadImageColors(Image image);                                                               
RLAPI Color *LoadImagePalette(Image image, int maxPaletteSize, int *colorCount);                         
RLAPI void UnloadImageColors(Color *colors);                                                             
RLAPI void UnloadImagePalette(Color *colors);                                                            
RLAPI Rectangle GetImageAlphaBorder(Image image, float threshold);                                       
RLAPI Color GetImageColor(Image image, int x, int y);                                                    
RLAPI void ImageClearBackground(Image *dst, Color color);                                                
RLAPI void ImageDrawPixel(Image *dst, int posX, int posY, Color color);                                  
RLAPI void ImageDrawPixelV(Image *dst, Vector2 position, Color color);                                   
RLAPI void ImageDrawLine(Image *dst, int startPosX, int startPosY, int endPosX, int endPosY, Color color); 
RLAPI void ImageDrawLineV(Image *dst, Vector2 start, Vector2 end, Color color);                          
RLAPI void ImageDrawCircle(Image *dst, int centerX, int centerY, int radius, Color color);               
RLAPI void ImageDrawCircleV(Image *dst, Vector2 center, int radius, Color color);                        
RLAPI void ImageDrawRectangle(Image *dst, int posX, int posY, int width, int height, Color color);       
RLAPI void ImageDrawRectangleV(Image *dst, Vector2 position, Vector2 size, Color color);                 
RLAPI void ImageDrawRectangleRec(Image *dst, Rectangle rec, Color color);                                
RLAPI void ImageDrawRectangleLines(Image *dst, Rectangle rec, int thick, Color color);                   
RLAPI void ImageDraw(Image *dst, Image src, Rectangle srcRec, Rectangle dstRec, Color tint);             
RLAPI void ImageDrawText(Image *dst, const char *text, int posX, int posY, int fontSize, Color color);   
RLAPI void ImageDrawTextEx(Image *dst, Font font, const char *text, Vector2 position, float fontSize, float spacing, Color tint); 
RLAPI Texture2D LoadTexture(const char *fileName);                                                       
RLAPI Texture2D LoadTextureFromImage(Image image);                                                       
RLAPI TextureCubemap LoadTextureCubemap(Image image, int layout);                                        
RLAPI RenderTexture2D LoadRenderTexture(int width, int height);                                          
RLAPI void UnloadTexture(Texture2D texture);                                                             
RLAPI void UnloadRenderTexture(RenderTexture2D target);                                                  
RLAPI void UpdateTexture(Texture2D texture, const void *pixels);                                         
RLAPI void UpdateTextureRec(Texture2D texture, Rectangle rec, const void *pixels);                       
RLAPI void GenTextureMipmaps(Texture2D *texture);                                                        
RLAPI void SetTextureFilter(Texture2D texture, int filter);                                              
RLAPI void SetTextureWrap(Texture2D texture, int wrap);                                                  
RLAPI void DrawTexture(Texture2D texture, int posX, int posY, Color tint);                               
RLAPI void DrawTextureV(Texture2D texture, Vector2 position, Color tint);                                
RLAPI void DrawTextureEx(Texture2D texture, Vector2 position, float rotation, float scale, Color tint);  
RLAPI void DrawTextureRec(Texture2D texture, Rectangle source, Vector2 position, Color tint);            
RLAPI void DrawTextureQuad(Texture2D texture, Vector2 tiling, Vector2 offset, Rectangle quad, Color tint);  
RLAPI void DrawTextureTiled(Texture2D texture, Rectangle source, Rectangle dest, Vector2 origin, float rotation, float scale, Color tint);      
RLAPI void DrawTexturePro(Texture2D texture, Rectangle source, Rectangle dest, Vector2 origin, float rotation, Color tint);           
RLAPI void DrawTextureNPatch(Texture2D texture, NPatchInfo nPatchInfo, Rectangle dest, Vector2 origin, float rotation, Color tint);   
RLAPI void DrawTexturePoly(Texture2D texture, Vector2 center, Vector2 *points, Vector2 *texcoords, int pointCount, Color tint);      
RLAPI Color Fade(Color color, float alpha);                                 
RLAPI int ColorToInt(Color color);                                          
RLAPI Vector4 ColorNormalize(Color color);                                  
RLAPI Color ColorFromNormalized(Vector4 normalized);                        
RLAPI Vector3 ColorToHSV(Color color);                                      
RLAPI Color ColorFromHSV(float hue, float saturation, float value);         
RLAPI Color ColorAlpha(Color color, float alpha);                           
RLAPI Color ColorAlphaBlend(Color dst, Color src, Color tint);              
RLAPI Color GetColor(unsigned int hexValue);                                
RLAPI Color GetPixelColor(void *srcPtr, int format);                        
RLAPI void SetPixelColor(void *dstPtr, Color color, int format);            
RLAPI int GetPixelDataSize(int width, int height, int format);              