src/ref/RayLib.pas


  // Create an image duplicate (useful for transformations)
  ImageCopy: function(image: TImage): TImage; cdecl;
  // Create an image from another image piece
  ImageFromImage: function(image: TImage; rec: TRectangle): TImage; cdecl;
  // Create an image from text (default font)
  ImageText: function(const text: PUTF8Char; fontSize: Integer; color: TColor): TImage; cdecl;
  // Create an image from text (custom sprite font)
  ImageTextEx: function(font: TFont; const text: PUTF8Char; fontSize: Single; spacing: Single; tint: TColor): TImage; cdecl;
  // Convert image to POT (power-of-two)
  ImageToPOT: procedure(image: PImage; fillColor: TColor); cdecl;
  // Convert image data to desired format
  ImageFormat: procedure(image: PImage; newFormat: Integer); cdecl;
  // Crop an image to a defined rectangle
  ImageCrop: procedure(image: PImage; crop: TRectangle); cdecl;
  // Crop image depending on alpha value
  ImageAlphaCrop: procedure(image: PImage; threshold: Single); cdecl;
  // Clear alpha channel to desired color
  ImageAlphaClear: procedure(image: PImage; color: TColor; threshold: Single); cdecl;
  // Apply alpha mask to image
  ImageAlphaMask: procedure(image: PImage; alphaMask: TImage); cdecl;
  // Premultiply alpha channel
  ImageAlphaPremultiply: procedure(image: PImage); cdecl;
  // Resize image (Bicubic scaling algorithm)
  ImageResize: procedure(image: PImage; newWidth: Integer; newHeight: Integer); cdecl;
  // Resize image (Nearest-Neighbor scaling algorithm)
  ImageResizeNN: procedure(image: PImage; newWidth: Integer; newHeight: Integer); cdecl;
  // Resize canvas and fill with color
  ImageResizeCanvas: procedure(image: PImage; newWidth: Integer; newHeight: Integer; offsetX: Integer; offsetY: Integer; color: TColor); cdecl;
  // Compute all mipmap levels for a provided image
  ImageMipmaps: procedure(image: PImage); cdecl;
  // Dither image data to 16bpp or lower (Floyd-Steinberg dithering)
  ImageDither: procedure(image: PImage; rBpp: Integer; gBpp: Integer; bBpp: Integer; aBpp: Integer); cdecl;
  // Flip image vertically
  ImageFlipVertical: procedure(image: PImage); cdecl;
  // Flip image horizontally
  ImageFlipHorizontal: procedure(image: PImage); cdecl;
  // Rotate image clockwise 90deg
  ImageRotateCW: procedure(image: PImage); cdecl;
  // Rotate image counter-clockwise 90deg
  ImageRotateCCW: procedure(image: PImage); cdecl;
  // Modify image color: tint
  ImageColorTint: procedure(image: PImage; color: TColor); cdecl;
  // Modify image color: invert
  ImageColorInvert: procedure(image: PImage); cdecl;
  // Modify image color: grayscale
  ImageColorGrayscale: procedure(image: PImage); cdecl;
  // Modify image color: contrast (-100 to 100)
  ImageColorContrast: procedure(image: PImage; contrast: Single); cdecl;
  // Modify image color: brightness (-255 to 255)
  ImageColorBrightness: procedure(image: PImage; brightness: Integer); cdecl;
  // Modify image color: replace color
  ImageColorReplace: procedure(image: PImage; color: TColor; replace: TColor); cdecl;
  // Get pixel data from image as a Color struct array
  LoadImageColors: function(image: TImage): PColor; cdecl;
  // Extract color palette from image to maximum size (memory should be freed)
  LoadImagePalette: function(image: TImage; maxPaletteSize: Integer; colorCount: PInteger): PColor; cdecl;
  // Unload color data loaded with LoadImageColors()
  UnloadImageColors: procedure(Colors: PColor); cdecl;
  // Unload colors palette loaded with LoadImagePalette()
  UnloadImagePalette: procedure(Colors: PColor); cdecl;
  // Get image alpha border rectangle
  GetImageAlphaBorder: function(image: TImage; threshold: Single): TRectangle; cdecl;
  // Get image pixel color at (x, y) position
  GetImageColor: function(Image: TImage; x, y: Integer): TColor; cdecl;

  { Image drawing functions }
  // NOTE: Image software-rendering functions (CPU)

  // Clear image background with given color
  ImageClearBackground: procedure(dst: PImage; color: TColor); cdecl;
  // Draw pixel within an image
  ImageDrawPixel: procedure(dst: PImage; posX: Integer; posY: Integer; color: TColor); cdecl;
  // Draw pixel within an image (Vector version)
  ImageDrawPixelV: procedure(dst: PImage; position: TVector2; color: TColor); cdecl;
  // Draw line within an image
  ImageDrawLine: procedure(dst: PImage; startPosX: Integer; startPosY: Integer; endPosX: Integer; endPosY: Integer; color: TColor); cdecl;
  // Draw line within an image (Vector version)
  ImageDrawLineV: procedure(dst: PImage; start: TVector2; &end: TVector2; color: TColor); cdecl;
  // Draw circle within an image
  ImageDrawCircle: procedure(const dst: TImage; CenterX, CenterY, Radius: Integer; Color: TColor); cdecl;
  // Draw circle within an image (Vector version)
  ImageDrawCircleV: procedure(dst: PImage; center: TVector2; radius: Integer; color: TColor); cdecl;
  // Draw rectangle within an image
  ImageDrawRectangle: procedure(dst: PImage; posX: Integer; posY: Integer; width: Integer; height: Integer; color: TColor); cdecl;
  // Draw rectangle within an image (Vector version)
  ImageDrawRectangleV: procedure(dst: PImage; position: TVector2; size: TVector2; color: TColor); cdecl;
  // Draw rectangle within an image
  ImageDrawRectangleRec: procedure(dst: PImage; rec: TRectangle; color: TColor); cdecl;
  // Draw rectangle lines within an image
  ImageDrawRectangleLines: procedure(dst: PImage; rec: TRectangle; thick: Integer; color: TColor); cdecl;
  // Draw a source image within a destination image (tint applied to source)
  ImageDraw: procedure(dst: PImage; src: TImage; srcRec: TRectangle; dstRec: TRectangle; tint: TColor); cdecl;
  // Draw text (using default font) within an image (destination)
  ImageDrawText: procedure(dst: PImage; const text: PUTF8Char; posX, posY: Integer; fontSize: Integer; color: TColor); cdecl;
  // Draw text (custom sprite font) within an image (destination)
  ImageDrawTextEx: procedure(dst: PImage; font: TFont; const text: PUTF8Char; position: TVector2; fontSize: Single; spacing: Single; color: TColor); cdecl;

  { Texture loading functions }
  // NOTE: These functions require GPU access

  // Load texture from file into GPU memory (VRAM)
  LoadTexture: function(const fileName: PUTF8Char): TTexture2D; cdecl;
  // Load texture from image data
  LoadTextureFromImage: function(image: TImage): TTexture2D; cdecl;
  // Load cubemap from image, multiple image cubemap layouts supported
  LoadTextureCubemap: function(image: TImage; Layout: Integer): TTextureCubemap; cdecl;
  // Load texture for rendering (framebuffer)
  LoadRenderTexture: function(Width: Integer; Height: Integer): TRenderTexture2D; cdecl;
  // Unload texture from GPU memory (VRAM)
  UnloadTexture: procedure(Texture: TTexture2D); cdecl;
  // Unload render texture from GPU memory (VRAM)
  UnloadRenderTexture: procedure(Target: TRenderTexture2D); cdecl;
  // Update GPU texture with new data
  UpdateTexture: procedure(Texture: TTexture2D; const pixels: Pointer); cdecl;
  // Update GPU texture rectangle with new data
  UpdateTextureRec: procedure(Texture: TTexture2D; rec: TRectangle; const pixels: Pointer); cdecl;

  { Texture configuration functions }

  // Generate GPU mipmaps for a texture
  GenTextureMipmaps: procedure(texture: PTexture2D); cdecl;
  // Set texture scaling filter mode
  SetTextureFilter: procedure(texture: TTexture2D; Filter: TTextureFilter); cdecl;
  // Set texture wrapping mode
  SetTextureWrap: procedure(texture: TTexture2D; Wrap: Integer); cdecl;

  { Texture drawing functions }

  // Draw a Texture2D
  DrawTexture: procedure(Texture: TTexture2D; posX: Integer; posY: Integer; tint: TColor); cdecl;
  // Draw a Texture2D with position defined as Vector2
  DrawTextureV: procedure(Texture: TTexture2D; position: TVector2; tint: TColor); cdecl;
  // Draw a Texture2D with extended parameters
  DrawTextureEx: procedure(Texture: TTexture2D; position: TVector2; rotation: Single; scale: Single; tint: TColor); cdecl;
  // Draw a part of a texture defined by a rectangle
  DrawTextureRec: procedure(Texture: TTexture2D; Source: TRectangle; Position: TVector2; tint: TColor); cdecl;
  // Draw texture quad with tiling and offset parameters
  DrawTextureQuad: procedure(Texture: TTexture2D; tiling: TVector2; offset: TVector2; quad: TRectangle; tint: TColor); cdecl;
  // Draw part of a texture (defined by a rectangle) with rotation and scale tiled into dest.
  DrawTextureTiled: procedure(Texture: TTexture2D; source: TRectangle; dest: TRectangle; origin: TVector2; rotation: Single; Scale: Single; tint: TColor); cdecl;
  // Draw a part of a texture defined by a rectangle with 'pro' parameters
  DrawTexturePro: procedure(Texture: TTexture2D; source: TRectangle; dest: TRectangle; origin: TVector2; rotation: Single; tint: TColor); cdecl;
  // Draws a texture (or part of it) that stretches or shrinks nicely
  DrawTextureNPatch: procedure(Texture: TTexture2D; nPatchInfo: TNPatchInfo; dest: TRectangle; origin: TVector2; rotation: Single; tint: TColor); cdecl;
  // Draw a textured polygon
  DrawTexturePoly: procedure(texture: TTexture2D; center: TVector2; points: PVector2; texcoords: PVector2; pointCount: Integer; tint: TColor); cdecl;

  { Image/Texture misc functions }

  { Color-related functions }

  // Color fade-in or fade-out, alpha goes from 0.0f to 1.0f
  Fade: function(color: TColor; Alpha: Single): TColor; cdecl;
  // Get hexadecimal value for a Color
  ColorToInt: function(color: TColor): Integer; cdecl;
  // Get color normalized as float [0..1]
  ColorNormalize: function(color: TColor): TVector4; cdecl;
  // Get color from normalized values [0..1]
  ColorFromNormalized: function(normalized: TVector4): TColor; cdecl;
  // Get HSV values for a Color, hue [0..360], saturation/value [0..1]
  ColorToHSV: function(color: TColor): TVector3; cdecl;
  // Get a Color from HSV values, hue [0..360], saturation/value [0..1]
  ColorFromHSV: function(hsv: TVector3): TColor; cdecl;
  // Get color with alpha applied, alpha goes from 0.0f to 1.0f
  ColorAlpha: function(Color: TColor; Alpha: Single): TColor; cdecl;
  // Get src alpha-blended into dst color with tint
  ColorAlphaBlend: function(dst, src, tint: TColor): TColor; cdecl;
  // Get a Color struct from hexadecimal value
  GetColor: function(hexValue: Cardinal): TColor; cdecl;
  // Get Color from a source pixel pointer of certain format
  GetPixelColor: function(srcPtr: Pointer; format: Integer): TColor; cdecl;
  // Set color formatted into destination pixel pointer
  SetPixelColor: function(dstPtr: Pointer; Color: TColor; format: Integer): TColor; cdecl;
  // Get pixel data size in bytes (image or texture)
  GetPixelDataSize: function(width: Integer; height: Integer; format: Integer): Integer; cdecl;

//------------------------------------------------------------------------------------
// Font Loading and Text Drawing Functions (Module: text)
//------------------------------------------------------------------------------------

  { Font loading/unloading functions }
